--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <h1>Hello World!</h1> 
-   <h3>My first test is going green</h3>
+   <h3>My first test is going Green</h3>
    <input type="text" name="firstName">
    <input type="text" name="email">
    <input type="password" name="password">
@@ -16,18 +16,18 @@
    <div id="confirmation-message"></div>
 
    <script>
-       const emailInput = document.querySelector('input[name=email]')
-       const button = document.getElementById('confirmation-message')
-       const messageElement = document.getElementById('confirmation-message')
-       button.addEventListener('click')
-       if(emailInpit.value === null) {
-           messageElement.innerText = 
-           "Hey! you need to give us your email Adress!"
-       } else {
-           // We would make a network call to the system that creates accounts
-           messageElement.innerText = 'Thank you for signing up!'
-       }
+    const emailInput = document.querySelector('input[name=email]')
+    const button = document.getElementById('confirmation-message')
+    const messageElement = document.getElementById('confirmation-message')
+    button.addEventListener('click')
+    if(emailInpit.value === null) {
+        messageElement.innerText = 
+        "Hey! you need to give us your email Adress!"
+    } else {
+        // We would make a network call to the system that creates accounts
+        messageElement.innerText = 'Thank you for signing up!'
+    }
 
-   </script>
+</script>
 </body>
 </html>
