--- a/src/index.html
+++ b/src/index.html
@@ -12,22 +12,20 @@
    <input type="text" name="firstName">
    <input type="text" name="email">
    <input type="password" name="password">
-   <input type="submit" value="Register" id="submit-button">
+   <input type="submit" value="Register" id='submit-button'>
    <div id="confirmation-message"></div>
 
    <script>
-    const emailInput = document.querySelector('input[name=email]')
-    const button = document.getElementById('confirmation-message')
-    const messageElement = document.getElementById('confirmation-message')
-    button.addEventListener('click')
-    if(emailInpit.value === null) {
-        messageElement.innerText = 
-        "Hey! you need to give us your email Adress!"
-    } else {
-        // We would make a network call to the system that creates accounts
-        messageElement.innerText = 'Thank you for signing up!'
-    }
-
-</script>
+    const emailInput = document.querySelector('input[name=email]');
+    const button = document.getElementById('submit-button');
+    const messageElement = document.getElementById('confirmation-message');
+    button.addEventListener('click', ()=>{
+        if (emailInput.value == '') {
+            messageElement.innerText = "Hey! you need to give us your Email adress!";
+        } else {
+            messageElement.innerText = 'Thank you for signing up!';
+        }
+    });
+    </script>
 </body>
 </html>
